# ModellingApp

./: CMakeLists.txt  Emscripten.cmake  Main.cpp
Experimenting/: HelloWorld.c  cube.html  cube.js  cube.wasm  donut.c  donut.html  donut.js  donut.wasm  hello.wasm
src/: Main.cpp
